# azureai-samples

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config-remote.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  azureai-samples.sln  basic-agent-identity.bicep  basic-agent-identity.json  basic-agent-keys.bicep  basic-agent-keys.json  basic-agent.parameters.json  byo-agent.bicep  conftest.py  detect_azure_secrets.py  dev-requirements.txt  main.bicep  official-ai-resources-list-python.md  official-ai-resources-list.md  pyproject.toml  quickstart.md  standard-agent-identity.bicep  standard-agent.bicep  standard-agent.json  standard-agent.parameters.json  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: build_agent_setup_bicep.py  build_bicep.sh  commit-filesize-diff-summary.py  detect_azure_secrets.py
.github/workflows/: pre-commit.yml  pull-request-checks.yml  run-infra.yml  run-samples.yml
.infra/deployment/: main.bicep
.infra/pytest_plugins/changed_samples/: pyproject.toml
.infra/pytest_plugins/changed_samples/src/pytest_changed_samples/: git_utils.py  plugin.py
modules/: ai-hub.bicep  dependent-resources.bicep
modules-byo/: byo-ai-hub.bicep  byo-ai-project.bicep  byo-dependent-resources.bicep
modules-standard/: standard-ai-hub-identity.bicep  standard-ai-hub.bicep  standard-ai-project-identity.bicep  standard-ai-project.bicep  standard-dependent-resources.bicep
notebooks/: README-template.md  template.ipynb
samples/: README.md  llama-3.md  use-openai.md
scenarios/: README-template.md
scenarios/Agents/samples/code-interpreter-custom/: .env.sample  README.md  infra.bicep  main.py  pyproject.toml
(+899 files in other folders)
